--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
+@import url=('https://fonts.googleapis.com/css?family=Fjalla+One|Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Fjalla One', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+h1 {
+    font-size: 50px;
+    line-height: 64px;
+    color: #222;
+}
+
+h2 {
+    font-size: 46px;
+    line-height: 54px;
+    color: #222;
+}
+
+h4 {
+    font-size: 20px;
+    color: #222;
+}
+
+h6 {
+    font-weight: 700;
+    font-size: 12px;
+}
+
+p {
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: #465b52;
+    margin: 15px 0 20px 0;
+}
+dd {
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: #465b52;
+    margin: 15px 0 20px 0;
+}
+
 .homepage {
     align-items: center;
     background-color: var(--cultured-pearl);
