--- a/style.css
+++ b/style.css
@@ -98,6 +98,22 @@ dd {
     font-size: 20px;
 }
 
+#feature {
+    display: flex;
+    align-items: normal;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#feature .featured-1 {
+    width: 180px;
+    text-align: float:right;
+    padding: 25px 15px;
+    border-radius: 4px;
+    border: 1px solid #cce7d0;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, .03);
+    transition: 0.3s ease;
+    margin: 15px 0;
+}
 .homepage {
     align-items: center;
     background-color: var(--cultured-pearl);
