--- a/style.css
+++ b/style.css
@@ -13,23 +13,30 @@ html {
 h1 {
     font-size: 50px;
     line-height: 64px;
-    color: #222;
+    color: #130C12;
 }
 
 h2 {
     font-size: 46px;
     line-height: 54px;
-    color: #222;
+    color: #130C12;
 }
 
 h3 {
     font-size: 32px;
-    color: #222;
+    color: #130C12;
 }
 
 h4 {
     font-size: 20px;
-    color:#222;
+    color:#130C12;
+    padding-top:5px;
+}
+h5 {
+    font-size: 18px;
+    color:#130C12;
+    font-family: 'Poppins';
+    font-weight:400;
     padding-top:5px;
 }
 h6 {
@@ -40,7 +47,7 @@ h6 {
 p {
     font-family: 'Poppins';
     font-size: 16px;
-    color: #222;
+    color: #130C12;
     margin: 15px 0 20px 0;
 }
 body {
@@ -167,18 +174,14 @@ img {
 #product1 .product {
     width: 23%;
     min-width: 250px;
-    padding: 10px 12px;
+    padding: 25px 15px;
     transition: .2s;
     position: relative;
     cursor: pointer;
     margin: 20px 0;
-    padding-right:10px;
 }
 
-#product1 .product:hover {
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
-}
-
+/*fit image into product card*/
 #product1 .product img {
     width: 100%;
     height: 65%;
@@ -187,37 +190,44 @@ img {
 
 #product1 .product .des {
     text-align: start;
-    padding: 10px 0;
 }
-
-#product1 .product .des span {
-    color: #606063;
-    font-size: 12px;
+/*style prod cards' text*/
+#product1 .product .des h4 {
+    padding-top: 25px;
+    font-size: 26px;
+    font-weight: 500;
 }
-
-#product1 .pro .des h5 {
-    padding-top: 7px;
-    color: #1a1a1a;
+#product1 .product .des p {
+    color: transparent;
+    font-size: 18px;
+    font-weight:700;
+    margin:0;
+    margin-top: 8px;
+}
+#product1 .product .des .actual-price {
+    text-decoration: line-through;
     font-size: 14px;
-    transition: 0.2s;
+    color: transparent;
+    margin-top: 3px;
 }
-
+/*Hover effect for prod cards*/
 #product1 .product:hover {
-    transform: scale(1.125);
+    transform: scale(1.15);
+    background-color: #FAAD0D;
 }
-
-#product1 .pro .des i {
-    color: rgb(240, 177, 18);
-    font-size: 12px;
+#product1 .product:hover .des h4 {
+    color: #fff;
+    transition: 0.4s ease;
 }
-
-#product1 .pro .des h4 {
-    padding-top: 7px;
-    font-size: 15px;
-    font-weight: 700;
-    color: #088178;
+#product1 .product:hover .des .price {
+    color: #130C12;
+    transition: 0.8s ease;
 }
-
+#product1 .product:hover .des .actual-price {
+    color: #BF40C7;
+    transition: 0.8s ease;
+}
+/*Add to cart button styling & hover effect*/
 #product1 .pro .cart {
     width: 40px;
     height: 40px;
