--- a/style.css
+++ b/style.css
@@ -113,6 +113,23 @@ body {
     font-weight: 500;
     font-size: 20px;
 }
+/*banner styling*/
+#banner {
+    display: flex;
+    justify-content: space-around;
+    background-color: #130C12;
+    padding:5px;
+}
+#banner p {
+    font-size:15px;
+    font-weight:500;
+    color:#fff;
+    margin:5px;
+}
+#banner span {
+    font-family: 'poppins';
+    color:#FAAD0D;
+}
 /*featured record section in homepage*/
 #feature1 {
     display: flex;
@@ -162,6 +179,7 @@ img {
 /*Recommendation section in homepage*/
 #product1 {
     text-align: center;
+    padding-bottom:15vh;
 }
 /*arrange prod cards in rows & style*/
 #product1 .product-container {
@@ -227,20 +245,120 @@ img {
     color: #BF40C7;
     transition: 0.8s ease;
 }
-
-#banner {
-    display: flex;
-    justify-content: space-around;
+.next-btn {
+    font-family:'poppins';
+    font-size:16px;
+    font-weight:600;
+    padding: 13px 30px;
+    color: #fff;
+    background-color: #D383CC;
+    transition: 0.2s;
+    border: none;
+    border-radius:3px;
+}
+.next-btn:hover {
+    color:#D383CC;
     background-color: #130C12;
-    padding:5px;
 }
-#banner p {
-    font-size:15px;
-    font-weight:500;
-    color:#fff;
-    margin:5px;
+/*style genre section*/
+#genre-banner{
+    background-color: #130C12;
+    text-align: center;
+    Padding-bottom:10vh;
 }
-#banner span {
-    font-family: 'poppins';
+#genre-banner .genre-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#genre-banner h3 {
     color:#FAAD0D;
+    padding: 40px;
 }
+#genre-banner .genre-container h3{
+    color:#fff;
+}
+#genre-banner .banner-box {
+    background-image: url("img/thumb11.jpg");
+    min-width: 380px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding:30px;
+    margin: 40px 8px;
+    transition: 0.2s;
+
+}
+#genre-banner .box2 {
+    background-image: url("img/thumb10.jpg");
+}
+#genre-banner .box3 {
+    background-image: url("img/thumb10.jpg");
+}
+#genre-banner .box4 {
+    background-image: url("img/thumb7.jpg");
+}
+#genre-banner .box5 {
+    background-image: url("img/thumb9.jpg");
+}
+#genre-banner .box6 {
+    background-image: url("img/thumb5.jpg");
+}
+#genre-banner .banner-box:hover {
+    transform: scale(1.15);
+}
+#genre-banner .next-btn:hover {
+    color:#130C12;
+    background-color: #FAAD0D;
+}
+/*Newsletter section*/
+
+#newsletter {
+    height:30vh;
+    background-color: #FAAD0D;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#newsletter p {
+    font-weight:500;
+    font-size:16px;
+    font-style: italic;
+    color:#52404f;
+}
+#newsletter input {
+    height: 3.125rem;
+    padding: 0 1.25rem;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    outline: none;
+}
+
+#newsletter .form {
+    display: flex;
+    width: 40%;
+}
+
+#newsletter button {
+    background-color: #130C12;
+    color: #FAAD0D;
+    white-space: nowrap;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+#newsletter button:hover {
+    background-color: #BF40C7;
+    color: #fff;
+}
+/*footer section*/
