--- a/style.css
+++ b/style.css
@@ -169,18 +169,26 @@ img {
 #feature1 .featured-1a {
     height:600px;
     width:700px;
+    cursor: pointer;
+
 }
 #feature1 .featured-1b {
     margin-left: 10%;
+    cursor: pointer;
+
 }
 #feature2 .featured-2b {
     width: 700px;
     height: 600px;
-    margin-left:10%
+    margin-left:10%;
+    cursor: pointer;
+
 }
 #feature2 .featured-2a {
     text-align: right;
     margin-left:20%;
+    cursor: pointer;
+
 }
 #feature1 h3 {
     padding-top:30px;
@@ -429,6 +437,43 @@ footer .follow i:hover,
 footer a:hover {
     color: #FAAD0D;
 }
+/* Shop Page */
+
+#page-header {
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-image: url("img/shoppagebanner.png");
+    background-size: cover;
+    padding: 14px;
+}
+
+#page-header h2,
+#page-header p {
+    color: #fff;
+}
+
+#pagination {
+    text-align: center;
+}
+
+#pagination a {
+    text-decoration: none;
+    background: #D383CC;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+
+#pagination a svg {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+
 /*Start Media Query*/
 @media (max-width:799px) {
     .section-p1 {
