--- a/style.css
+++ b/style.css
@@ -685,8 +685,65 @@ footer a:hover {
     padding: 10px;
     font-size: 13px;
 }
+/*CHeckout page*/
+.checkout-section #subtotal {
+ padding-left: 10%;
 
+} 
+input:not(.search-box, .checkbox, .size-checkbox, input[type="file"]),
+textarea{
+    display: block;
+    width: 300px;
+    height: 40px;
+    padding: 20px;
+    border-radius: 5px;
+    background: #fff;
+    border: none;
+    outline: none;
+    margin: 20px 0;
+    text-transform: capitalize;
+    color: #383838;
+    font-size: 14px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.01);
+    font-family: 'Poppins', sans-serif;
+}
+.form{
+    width: 100%;
+    padding: 20px 10vw;
+}
 
+.heading{
+    text-transform: capitalize;
+    font-size: 500;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.form input{
+    background: #f5f5f5 !important;
+    width: 100% !important;
+}
+
+.three-input-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.three-input-container input{
+    margin: 0 !important;
+}
+
+#state{
+    margin: 0 20px !important;
+}
+
+.checkout-box{
+    width: 100%;
+    height: 200px;
+    border-radius: 2px;
+    border: 1px solid #FAAD0D;
+    padding-left: 10%;
+}
 /*Start Media Query*/
 @media (max-width:799px) {
     .section-p1 {
