--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ img {
     color:#fff;
 }
 #genre-banner .banner-box {
-    background-image: url("img/thumb11.jpg");
+    background-image: url("img/genre1.png");
     min-width: 380px;
     height: 50vh;
     background-size: cover;
@@ -336,19 +336,19 @@ img {
 
 }
 #genre-banner .box2 {
-    background-image: url("img/thumb10.jpg");
+    background-image: url("img/genre2.jpg");
 }
 #genre-banner .box3 {
-    background-image: url("img/thumb10.jpg");
+    background-image: url("img/genre3.jpg");
 }
 #genre-banner .box4 {
-    background-image: url("img/thumb7.jpg");
+    background-image: url("img/genre4.jpg");
 }
 #genre-banner .box5 {
-    background-image: url("img/thumb9.jpg");
+    background-image: url("img/genre5.jpg");
 }
 #genre-banner .box6 {
-    background-image: url("img/thumb5.jpg");
+    background-image: url("img/genre6.jpg");
 }
 #genre-banner .banner-box:hover {
     transform: scale(1.15);
